// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  .cache-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1j3bssc-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
    class="cache-1q42p0o-StyledContainer e1vt8sjg2"
  >
    <span
      aria-disabled="false"
      class="cache-1j3bssc-StyledTag e1vt8sjg1"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly colored 1`] = `
<DocumentFragment>
  .cache-hs7kz3-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #390171;
  background: #eeeeff;
  border: solid 1px #eeeeff;
}

.cache-1j3bssc-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
    class="cache-hs7kz3-StyledContainer e1vt8sjg2"
  >
    <span
      aria-disabled="false"
      class="cache-1j3bssc-StyledTag e1vt8sjg1"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-1xalbyg-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #c4c9d6;
  background: #e6e9f0;
  border: solid 1px #f6f6f8;
  cursor: not-allowed;
}

.cache-1j3bssc-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
    class="cache-1xalbyg-StyledContainer e1vt8sjg2"
  >
    <span
      aria-disabled="true"
      class="cache-1j3bssc-StyledTag e1vt8sjg1"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly neutral 1`] = `
<DocumentFragment>
  .cache-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1j3bssc-StyledTag {
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  max-width: 232px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
    class="cache-1q42p0o-StyledContainer e1vt8sjg2"
  >
    <span
      aria-disabled="false"
      class="cache-1j3bssc-StyledTag e1vt8sjg1"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;
